[gd_scene load_steps=17 format=3 uid="uid://dpoco6sigx3iq"]

[ext_resource type="PackedScene" uid="uid://cesbv875l2f1l" path="res://Scenes/levels/base_level.tscn" id="1_qdsx5"]
[ext_resource type="Script" path="res://Scenes/levels/level_1.gd" id="2_0a7ox"]
[ext_resource type="PackedScene" uid="uid://b20fqesu2lagx" path="res://Scenes/objects/door.tscn" id="2_m8bh2"]
[ext_resource type="Script" path="res://Scenes/levels/Objects_Level1.gd" id="3_htfu2"]
[ext_resource type="PackedScene" uid="uid://cc7jg0g3hp32o" path="res://Scenes/enemy/enemy.tscn" id="3_ldett"]
[ext_resource type="PackedScene" uid="uid://vyrfqrgfihuh" path="res://Scenes/objects/console.tscn" id="4_27btd"]
[ext_resource type="Theme" uid="uid://c0re1bitbft18" path="res://Assets/sci-fi-theme-4/sci-fi-theme.tres" id="5_xm76d"]
[ext_resource type="Script" path="res://Scenes/levels/CanvasLayer.gd" id="8_51qe5"]
[ext_resource type="Texture2D" uid="uid://chvlkmpaxjerw" path="res://Assets/Hearts/Red 16px2.png" id="8_y6m68"]
[ext_resource type="Texture2D" uid="uid://rqpwx511cav4" path="res://Assets/Hearts/16px.png" id="9_kfrr5"]
[ext_resource type="PackedScene" uid="uid://dqvfcu64ulrdj" path="res://Scenes/objects/portal.tscn" id="10_n6ech"]
[ext_resource type="AudioStream" uid="uid://q5jmf3tcljny" path="res://Assets/music/Level1_Under Stars (2005 Mix).mp3" id="12_pn451"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dor0c"]
size = Vector2(65, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8v4kk"]
size = Vector2(96, 89)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_or72r"]
size = Vector2(70.5, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrrue"]
size = Vector2(63.5, 83)

[node name="Level_1" instance=ExtResource("1_qdsx5")]
position = Vector2(664, -44)
script = ExtResource("2_0a7ox")

[node name="TileMap" parent="." index="0"]
position = Vector2(0, -12)
layer_0/tile_data = PackedInt32Array(2424832, 655360, 4, 2424833, 655360, 4, 2424834, 655360, 4, 2424835, 524288, 4, 2424836, 589824, 4, 2424837, 655360, 4, 2424838, 131072, 3, 2424839, 196608, 3, 2424840, 655360, 3, 2424841, 655360, 4, 2424842, 655360, 4, 2424843, 655360, 4, 2424844, 655360, 4, 2424845, 655360, 4, 2424846, 655360, 4, 2424847, 655360, 4, 2424848, 655360, 4, 2162688, 655360, 4, 2228224, 655360, 4, 2293760, 655360, 4, 2359296, 655360, 4, 2162689, 655360, 4, 2228225, 655360, 4, 2293761, 655360, 4, 2359297, 655360, 4, 2162690, 655360, 4, 2228226, 655360, 4, 2293762, 655360, 4, 2359298, 655360, 4, 2162691, 524288, 5, 2228227, 655360, 4, 2293763, 655360, 4, 2359299, 524288, 3, 2162692, 589824, 5, 2228228, 655360, 4, 2293764, 655360, 4, 2359300, 589824, 3, 2162693, 655360, 4, 2228229, 655360, 3, 2293765, 655360, 3, 2359301, 655360, 3, 2162694, 655360, 4, 2228230, 655360, 4, 2293766, 655360, 4, 2359302, 655360, 4, 2162695, 655360, 4, 2228231, 655360, 4, 2293767, 655360, 4, 2359303, 655360, 4, 2162696, 655360, 4, 2228232, 655360, 4, 2293768, 655360, 4, 2359304, 655360, 4, 2162697, 655360, 4, 2228233, 655360, 4, 2293769, 655360, 4, 2359305, 655360, 4, 2162698, 655360, 4, 2228234, 393216, 5, 2293770, 393216, 6, 2359306, 655360, 4, 2162699, 655360, 4, 2228235, 458752, 5, 2293771, 458752, 6, 2359307, 655360, 4, 2162700, 655360, 4, 2228236, 655360, 4, 2293772, 655360, 4, 2359308, 655360, 4, 2162701, 655360, 4, 2228237, 655360, 4, 2293773, 655360, 4, 2359309, 655360, 4, 2162702, 655360, 4, 2228238, 655360, 4, 2293774, 655360, 4, 2359310, 655360, 4, 2162703, 655360, 4, 2228239, 655360, 4, 2293775, 655360, 4, 2359311, 655360, 4, 2162704, 655360, 4, 2228240, 655360, 4, 2293776, 655360, 4, 2359312, 655360, 4, 2162705, 655360, 4, 2228241, 393216, 3, 2293777, 393216, 4, 2359313, 655360, 4, 2424849, 655360, 4, 2162706, 655360, 4, 2228242, 458752, 3, 2293778, 458752, 4, 2359314, 655360, 4, 2424850, 655360, 4, 2162707, 655360, 4, 2228243, 655360, 4, 2293779, 655360, 4, 2359315, 655360, 4, 2424851, 655360, 4, 2162708, 524288, 5, 2228244, 655360, 4, 2293780, 655360, 4, 2359316, 393216, 7, 2424852, 655360, 4, 2162709, 589824, 5, 2228245, 655360, 4, 2293781, 655360, 4, 2359317, 458752, 7, 2424853, 655360, 4, 2162710, 655360, 4, 2228246, 655360, 4, 2293782, 131072, 3, 2359318, 655360, 4, 2424854, 655360, 4, 2162711, 65536, 3, 2228247, 655360, 4, 2293783, 196608, 3, 2359319, 655360, 4, 2424855, 655360, 4, 2162712, 0, 3, 2228248, 655360, 4, 2293784, 655360, 4, 2359320, 655360, 4, 2424856, 655360, 4, 2162713, 65536, 3, 2228249, 655360, 4, 2293785, 655360, 4, 2359321, 655360, 4, 2424857, 655360, 4, 2162714, 65536, 3, 2228250, 655360, 4, 2293786, 655360, 4, 2359322, 655360, 4, 2424858, 655360, 4, 2162715, 0, 3, 2228251, 655360, 4, 2293787, 655360, 4, 2359323, 655360, 4, 2424859, 655360, 4, 2162716, 65536, 3, 2228252, 655360, 4, 2293788, 589824, 0, 2359324, 589824, 1, 2424860, 655360, 4, 2162717, 655360, 4, 2228253, 655360, 4, 2293789, 655360, 0, 2359325, 655360, 1, 2424861, 655360, 4, 2490392, 655360, 4, 2555928, 655360, 4, 2490393, 655360, 3, 2555929, 655360, 4, 2490394, 655360, 3, 2555930, 655360, 3, 2490395, 655360, 4, 2555931, 655360, 4, 2621465, 655360, 4, 2621466, 655360, 4, 2621467, 655360, 4, 1900574, 655360, 4, 1966110, 655360, 4, 2031646, 655360, 4, 1900575, 524288, 5, 1966111, 655360, 4, 2031647, 655360, 4, 1900576, 589824, 5, 1966112, 655360, 4, 2031648, 655360, 4, 1900577, 655360, 4, 1966113, 589824, 2, 2031649, 655360, 4, 1900578, 655360, 4, 1966114, 655360, 2, 2031650, 655360, 4, 1900579, 655360, 4, 1966115, 655360, 4, 2031651, 655360, 4, 1900580, 655360, 4, 1966116, 655360, 4, 2031652, 655360, 4, 1900581, 655360, 4, 1966117, 655360, 4, 2031653, 655360, 4, 1900582, 655360, 4, 1966118, 655360, 4, 2031654, 655360, 4, 1900583, 655360, 4, 1966119, 655360, 4, 2031655, 655360, 4, 1900584, 655360, 4, 1966120, 655360, 4, 2031656, 655360, 4, 1900585, 655360, 4, 1966121, 655360, 4, 2031657, 655360, 4, 1900586, 655360, 4, 1966122, 655360, 4, 2031658, 655360, 4, 1900587, 524288, 5, 1966123, 655360, 4, 2031659, 655360, 3, 1900588, 589824, 5, 1966124, 655360, 4, 2031660, 655360, 4, 1900589, 655360, 4, 1966125, 655360, 4, 2031661, 655360, 4, 2097187, 655360, 4, 2162723, 655360, 4, 2097188, 655360, 4, 2162724, 655360, 4, 2097189, 655360, 4, 2162725, 655360, 4, 2097190, 655360, 4, 2162726, 655360, 4, 2097191, 524288, 3, 2162727, 524288, 4, 2097192, 589824, 3, 2162728, 589824, 4, 2097193, 655360, 4, 2162729, 655360, 4, 2097194, 655360, 4, 2162730, 655360, 4, 2097195, 655360, 3, 2162731, 655360, 4, 2097196, 655360, 3, 2162732, 655360, 4, 2097197, 655360, 4, 2162733, 0, 4, 2162718, 655360, 4, 2228254, 655360, 4, 2293790, 655360, 4, 2359326, 655360, 4, 2424862, 655360, 4, 2162719, 655360, 4, 2228255, 655360, 4, 2293791, 655360, 4, 2359327, 655360, 4, 2424863, 655360, 4, 2162720, 655360, 4, 2228256, 655360, 4, 2293792, 655360, 4, 2359328, 655360, 4, 2424864, 655360, 4, 2162721, 655360, 4, 2228257, 655360, 4, 2293793, 655360, 4, 2359329, 655360, 4, 2424865, 655360, 4, 2162722, 655360, 4, 2228258, 655360, 4, 2293794, 655360, 4, 2359330, 524288, 3, 2424866, 524288, 4, 2293795, 655360, 4, 2359331, 589824, 3, 2424867, 589824, 4, 2293796, 655360, 4, 2359332, 655360, 4, 2424868, 655360, 4, 2293797, 655360, 4, 2359333, 655360, 4, 2424869, 655360, 4, 2293798, 655360, 4, 2359334, 655360, 4, 2424870, 655360, 4, 2228261, 655360, 4, 2228262, 655360, 4, 2228263, 655360, 4, 2293799, 655360, 4, 2228264, 655360, 4, 2293800, 655360, 4, 2228265, 655360, 4, 2293801, 655360, 4, 2228266, 655360, 4, 2293802, 655360, 4, 2228267, 655360, 4, 2293803, 655360, 4, 2228268, 655360, 4, 2293804, 655360, 4, 2228269, 0, 5, 2293805, 0, 6, 2359346, 327680, 7, 2359337, 655360, 4, 2424873, 655360, 4, 2359338, 655360, 4, 2424874, 655360, 3, 2359339, 655360, 3, 2424875, 655360, 3, 2359340, 655360, 4, 2424876, 655360, 4, 2359341, 0, 7, 2424877, 655360, 4, 2359342, 65536, 7, 2424878, 655360, 4, 2359343, 131072, 7, 2424879, 655360, 4, 2359344, 196608, 7, 2424880, 655360, 4, 2359345, 262144, 7, 2424881, 655360, 4, 2424882, 655360, 4, 2359347, 655360, 4, 2424883, 655360, 4, 2359348, 655360, 4, 2424884, 655360, 4, 2359349, 524288, 3, 2424885, 524288, 4, 2359350, 589824, 3, 2424886, 589824, 4, 2359351, 655360, 4, 2424887, 655360, 4, 2359352, 655360, 4, 2424888, 655360, 4, 2359353, 655360, 4, 2424889, 655360, 4, 2359354, 655360, 4, 2424890, 655360, 4, 2359355, 655360, 4, 2424891, 655360, 4, 2162734, 65536, 4, 2228270, 65536, 5, 2293806, 65536, 6, 2162735, 131072, 4, 2228271, 131072, 5, 2293807, 131072, 6, 2162736, 196608, 4, 2228272, 196608, 5, 2293808, 196608, 6, 2162737, 262144, 4, 2228273, 262144, 5, 2293809, 262144, 6, 2162738, 327680, 4, 2228274, 327680, 5, 2293810, 327680, 6, 2162739, 655360, 4, 2228275, 655360, 4, 2293811, 655360, 4, 2162740, 655360, 3, 2228276, 655360, 4, 2293812, 655360, 4, 2162741, 655360, 3, 2228277, 655360, 4, 2293813, 655360, 4, 2162742, 655360, 4, 2228278, 655360, 4, 2293814, 655360, 4, 2162743, 655360, 4, 2228279, 655360, 4, 2293815, 655360, 4, 2162744, 524288, 5, 2228280, 655360, 4, 2293816, 655360, 4, 2162745, 589824, 5, 2228281, 655360, 4, 2293817, 655360, 4, 2162746, 655360, 4, 2228282, 655360, 4, 2293818, 655360, 4, 2162747, 655360, 4, 2228283, 655360, 4, 2293819, 655360, 4, 2228284, 655360, 4, 2293820, 655360, 4, 2359356, 655360, 4, 2359357, 655360, 4, 2424893, 393216, 7, 2424892, 655360, 4, 2293821, 655360, 4, 2228285, 655360, 4, 2162749, 0, 3, 2293822, 655360, 4, 2293823, 655360, 4, 2359359, 655360, 4, 2359358, 655360, 4, 2424894, 458752, 7, 2424895, 655360, 4, 2424896, 655360, 4, 2424897, 655360, 4, 2424898, 655360, 4, 2424899, 655360, 4, 2424900, 655360, 4, 2424901, 655360, 4, 2424902, 655360, 4, 2359370, 655360, 4, 2359371, 655360, 4, 2359372, 0, 5, 2424909, 65536, 6, 2424910, 131072, 6, 2424911, 196608, 6, 2424912, 262144, 6, 2424913, 327680, 6, 2424914, 655360, 4, 2424915, 655360, 4, 2424916, 655360, 4, 2424917, 655360, 4, 2424918, 655360, 4, 2424919, 655360, 4, 2424920, 655360, 4, 2424921, 655360, 4, 2359385, 655360, 4, 2293849, 655360, 4, 2228313, 655360, 4, 2162777, 655360, 4, 2162776, 655360, 4, 2162775, 655360, 4, 2162774, 655360, 4, 2162773, 655360, 4, 2162772, 655360, 4, 2162771, 655360, 4, 2162769, 65536, 3, 2162768, 0, 3, 2162767, 655360, 4, 2162766, 655360, 3, 2162765, 655360, 4, 2162764, 655360, 4, 2162763, 655360, 4, 2162762, 655360, 4, 2162761, 458752, 3, 2162760, 393216, 3, 2162759, 655360, 4, 2162758, 655360, 4, 2162757, 655360, 4, 2162756, 655360, 4, 2162755, 655360, 4, 2162754, 655360, 4, 2162753, 655360, 4, 2162752, 655360, 4, 2162751, 655360, 4, 2162750, 65536, 3, 2228286, 655360, 4, 2228287, 655360, 4, 2228288, 655360, 4, 2228289, 524288, 3, 2228290, 589824, 3, 2228291, 655360, 3, 2228292, 655360, 4, 2228293, 655360, 4, 2228294, 655360, 4, 2228295, 655360, 4, 2228296, 393216, 4, 2228297, 458752, 4, 2228298, 655360, 4, 2228299, 655360, 4, 2228300, 655360, 4, 2228301, 655360, 4, 2293837, 65536, 4, 2293836, 0, 4, 2293835, 655360, 4, 2293834, 655360, 4, 2293833, 655360, 4, 2293832, 655360, 4, 2293831, 655360, 4, 2293830, 655360, 4, 2293829, 655360, 4, 2293828, 655360, 4, 2293827, 655360, 4, 2293826, 589824, 4, 2293825, 524288, 4, 2293824, 655360, 4, 2359360, 655360, 4, 2359361, 655360, 4, 2359362, 655360, 4, 2359363, 655360, 4, 2359364, 655360, 4, 2359365, 655360, 3, 2359366, 655360, 4, 2359367, 655360, 4, 2359368, 655360, 4, 2359369, 655360, 4, 2293838, 131072, 4, 2293839, 196608, 4, 2293840, 262144, 4, 2359374, 131072, 5, 2359373, 65536, 5, 2228302, 655360, 4, 2359375, 196608, 5, 2359376, 262144, 5, 2228304, 655360, 4, 2228303, 655360, 4, 2228305, 655360, 4, 2228306, 655360, 4, 2228307, 524288, 3, 2228308, 589824, 3, 2228309, 655360, 3, 2228310, 655360, 4, 2228311, 655360, 4, 2228312, 655360, 4, 2293842, 655360, 4, 2293841, 327680, 4, 2293843, 524288, 4, 2293844, 589824, 4, 2293845, 655360, 4, 2293846, 655360, 4, 2293847, 655360, 4, 2293848, 655360, 4, 2359381, 655360, 4, 2359380, 655360, 4, 2359382, 655360, 4, 2359383, 655360, 4, 2359384, 655360, 4, 2359379, 655360, 4, 2359378, 655360, 4, 2359377, 327680, 5, 2097245, 524288, 3, 2162781, 524288, 4, 2097246, 589824, 3, 2162782, 589824, 4, 2097247, 655360, 3, 2162783, 655360, 4, 2621515, 524288, 3, 2687051, 524288, 4, 2621516, 589824, 3, 2687052, 589824, 4, 2621517, 655360, 3, 2687053, 655360, 4, 2031705, 393216, 3, 2097241, 393216, 4, 2031706, 458752, 3, 2097242, 458752, 4, 2621523, 393216, 3, 2687059, 393216, 4, 2621524, 458752, 3, 2687060, 458752, 4, 2883656, 393216, 7, 2883657, 458752, 7, 2490455, 393216, 7, 2490456, 458752, 7, 2031713, 655360, 4, 2097249, 655360, 4, 2162785, 655360, 4, 2228321, 655360, 4, 2228320, 655360, 4, 2293856, 655360, 4, 2293857, 655360, 4, 2162784, 655360, 4, 2097248, 655360, 4, 2031712, 655360, 4, 2031711, 655360, 4, 2031710, 655360, 4, 2031709, 655360, 4, 2031708, 655360, 4, 2031707, 655360, 4, 2097243, 655360, 4, 2162779, 655360, 4, 2228315, 655360, 4, 2293851, 655360, 4, 2293852, 655360, 4, 2293853, 655360, 4, 2293854, 655360, 4, 2293855, 655360, 4, 2228319, 655360, 4, 2228318, 655360, 4, 2228317, 655360, 4, 2228316, 655360, 4, 2293850, 655360, 4, 2228314, 655360, 4, 2162778, 655360, 4, 2162780, 655360, 4, 2097244, 655360, 4, 2424904, 655360, 4, 2490440, 655360, 4, 2424905, 655360, 4, 2490441, 655360, 4, 2424906, 655360, 4, 2490442, 655360, 4, 2424907, 655360, 4, 2490443, 655360, 4, 2424908, 0, 6, 2490444, 0, 7, 2490445, 65536, 7, 2490446, 131072, 7, 2490447, 196608, 7, 2490448, 262144, 7, 2490449, 327680, 7, 2490450, 655360, 4, 2490451, 655360, 4, 2490452, 655360, 4, 2490453, 655360, 4, 2424903, 655360, 4, 2490454, 655360, 4, 2555976, 655360, 4, 2555977, 655360, 4, 2555978, 655360, 4, 2555979, 655360, 4, 2555980, 655360, 4, 2555981, 655360, 4, 2555982, 655360, 4, 2555983, 655360, 4, 2555984, 655360, 4, 2555985, 655360, 4, 2555986, 655360, 4, 2555987, 655360, 4, 2555988, 655360, 4, 2621512, 655360, 5, 2687048, 655360, 4, 2752584, 655360, 4, 2818120, 655360, 4, 2621513, 655360, 4, 2687049, 655360, 4, 2752585, 655360, 4, 2818121, 655360, 4, 2621514, 655360, 4, 2687050, 655360, 4, 2752586, 655360, 4, 2818122, 655360, 4, 2883658, 655360, 4, 2752587, 655360, 4, 2818123, 655360, 4, 2883659, 655360, 4, 2752588, 655360, 4, 2818124, 655360, 4, 2883660, 655360, 4, 2752589, 655360, 4, 2818125, 655360, 4, 2883661, 655360, 4, 2752590, 655360, 4, 2818126, 655360, 4, 2883662, 655360, 4, 2752591, 655360, 4, 2818127, 393216, 5, 2883663, 393216, 6, 2752592, 655360, 4, 2818128, 458752, 5, 2883664, 458752, 6, 2621518, 655360, 4, 2687054, 655360, 4, 2621519, 655360, 4, 2687055, 655360, 4, 2621520, 655360, 4, 2687056, 655360, 4, 2621521, 655360, 4, 2687057, 655360, 4, 2621522, 655360, 4, 2687058, 655360, 4, 2162770, 655360, 4)
layer_1/tile_data = PackedInt32Array(2490368, 65536, 0, 2490369, 65536, 0, 2490370, 65536, 0, 2490371, 65536, 0, 2490372, 65536, 0, 2490373, 65536, 0, 2490374, 65536, 0, 2490375, 65536, 0, 2490376, 65536, 0, 2490377, 65536, 0, 2490378, 65536, 0, 2490379, 65536, 0, 2490380, 65536, 0, 2490381, 65536, 0, 2490382, 65536, 0, 2490383, 65536, 0, 2490384, 65536, 0, 2490385, 65536, 0, 2490386, 65536, 0, 2490387, 65536, 0, 2490388, 65536, 0, 2490389, 65536, 0, 2490390, 65536, 0, 2490391, 131072, 0, 2490396, 0, 0, 2490397, 65536, 0, 2490398, 65536, 0, 2490399, 65536, 0, 2490400, 65536, 0, 2490401, 65536, 0, 2490402, 65536, 0, 2490403, 65536, 0, 2490404, 65536, 0, 2490405, 65536, 0, 2490406, 65536, 0, 2490407, 65536, 0, 2490408, 65536, 0, 2490409, 65536, 0, 2490410, 65536, 0, 2490411, 65536, 0, 2490412, 65536, 0, 2490413, 65536, 0, 2490414, 65536, 0, 2490415, 65536, 0, 2490416, 65536, 0, 2490417, 65536, 0, 2490418, 65536, 0, 2490419, 65536, 0, 2490420, 65536, 0, 2490421, 65536, 0, 2490422, 65536, 0, 2490423, 65536, 0, 2490424, 65536, 0, 2490425, 65536, 0, 2490426, 65536, 0, 2490427, 65536, 0, 2555927, 131072, 1, 2621463, 131072, 1, 2621464, 327680, 0, 2555932, 0, 1, 2621468, 0, 1, 2555903, 196608, 1, 2490367, 131072, 1, 2424831, 131072, 1, 2490428, 65536, 0, 1835037, 196608, 0, 1900573, 131072, 1, 1966109, 131072, 1, 2031645, 131072, 1, 2162687, 196608, 0, 2097152, 65536, 2, 2097153, 65536, 2, 2097154, 65536, 2, 2097155, 65536, 2, 2097156, 65536, 2, 2097157, 65536, 2, 2097158, 65536, 2, 2097159, 65536, 2, 2097160, 65536, 2, 2097161, 65536, 2, 2097162, 65536, 2, 2097163, 65536, 2, 2097164, 65536, 2, 2097165, 65536, 2, 2097166, 65536, 2, 2097167, 65536, 2, 2097168, 65536, 2, 2097169, 65536, 2, 2097170, 65536, 2, 2097171, 65536, 2, 2097172, 65536, 2, 2097173, 65536, 2, 2097174, 65536, 2, 2097175, 65536, 2, 2097176, 65536, 2, 2097177, 65536, 2, 2097178, 65536, 2, 2097179, 65536, 2, 2097180, 65536, 2, 2097181, 131072, 2, 1835038, 65536, 2, 1835039, 65536, 2, 1835040, 65536, 2, 1835041, 65536, 2, 1835042, 65536, 2, 1835043, 65536, 2, 1835044, 65536, 2, 1835045, 65536, 2, 1835046, 65536, 2, 1835047, 65536, 2, 1835048, 65536, 2, 1835049, 65536, 2, 1835050, 65536, 2, 1835051, 65536, 2, 1835052, 65536, 2, 2097182, 327680, 0, 2097183, 327680, 0, 2097184, 327680, 0, 2097185, 327680, 0, 2097186, 327680, 0, 2228259, 327680, 0, 2359335, 458752, 0, 2424871, 458752, 1, 2359336, 524288, 0, 2424872, 524288, 1, 2228260, 327680, 0, 2097202, 65536, 2, 2097203, 65536, 2, 1835053, 65536, 2, 1835054, 262144, 0, 1900590, 0, 1, 1966126, 0, 1, 2031662, 0, 1, 2097198, 0, 2, 2097199, 65536, 2, 2097200, 65536, 2, 2097201, 65536, 2, 2162717, 327680, 0, 1966111, 327681, 268435460, 1966110, 393217, 268435460, 2031647, 327681, 268435461, 2031646, 393217, 268435461, 2097204, 65536, 2, 2097205, 65536, 2, 2097206, 65536, 2, 2097207, 65536, 2, 2097208, 65536, 2, 2490429, 65536, 0, 2097213, 65536, 2, 2228226, 655361, 0, 2424834, 655361, 3, 2228227, 720897, 0, 2424835, 720897, 3, 2293762, 655361, 1, 2359298, 655361, 2, 2228228, 786433, 0, 2293764, 786433, 1, 2359300, 786433, 2, 2424836, 786433, 3, 2490430, 65536, 0, 2490431, 65536, 0, 2490432, 65536, 0, 2490433, 65536, 0, 2490434, 65536, 0, 2490435, 65536, 0, 2490436, 65536, 0, 2490437, 65536, 0, 2490438, 65536, 0, 2490439, 131072, 0, 2686999, 196608, 1, 2687000, 65536, 0, 2687001, 65536, 0, 2687002, 65536, 0, 2687003, 65536, 0, 2687004, 262144, 1, 2097214, 65536, 2, 2097215, 65536, 2, 2097216, 65536, 2, 2097217, 65536, 2, 2097218, 65536, 2, 2097219, 65536, 2, 2097220, 65536, 2, 2097221, 65536, 2, 2097222, 65536, 2, 2097223, 65536, 2, 2555975, 131072, 1, 2621511, 131072, 1, 2687047, 131072, 1, 2752583, 131072, 1, 2818119, 131072, 1, 2883655, 131072, 1, 2949192, 65536, 0, 2949193, 65536, 0, 2949194, 65536, 0, 2949195, 65536, 0, 2949196, 65536, 0, 2949197, 65536, 0, 2949198, 65536, 0, 2949199, 65536, 0, 2949200, 65536, 0, 2949191, 196608, 1, 2949201, 262144, 1, 2883665, 0, 1, 2818129, 0, 1, 2752594, 65536, 0, 2752595, 65536, 0, 2752596, 65536, 0, 2752593, 0, 0, 2752597, 262144, 1, 2687061, 0, 1, 2621525, 0, 1, 2555990, 65536, 0, 2555991, 65536, 0, 2555992, 65536, 0, 2555993, 262144, 1, 2490457, 0, 1, 2424921, 0, 1, 2555989, 0, 0, 2097224, 65536, 2, 2097225, 65536, 2, 2097226, 65536, 2, 2097227, 65536, 2, 2097228, 65536, 2, 2097229, 65536, 2, 2097230, 65536, 2, 2097231, 65536, 2, 2097232, 65536, 2, 2097233, 65536, 2, 2097234, 65536, 2, 2097235, 65536, 2, 2097236, 65536, 2, 2097237, 65536, 2, 2097238, 65536, 2, 2097239, 65536, 2, 2359385, 0, 0, 2359386, 65536, 0, 2359387, 65536, 0, 2359388, 65536, 0, 2359389, 65536, 0, 2359390, 65536, 0, 2359391, 65536, 0, 2359392, 65536, 0, 2359393, 65536, 0, 2359394, 262144, 1, 2162786, 0, 1, 2293858, 0, 1, 2228322, 0, 1, 2097250, 0, 1, 2031714, 0, 1, 1966177, 65536, 2, 1966176, 65536, 2, 1966175, 65536, 2, 1966174, 65536, 2, 1966173, 65536, 2, 1966172, 65536, 2, 1966171, 65536, 2, 1966170, 65536, 2, 1966169, 65536, 2, 2097240, 131072, 2, 2031704, 131072, 1, 1966168, 196608, 0, 1966178, 262144, 0, 2293820, 327681, 2, 2293818, 262145, 2, 2097209, 65536, 2, 2228282, 0, 2, 2228283, 65536, 2, 2228284, 131072, 2, 2162748, 131072, 1, 2162746, 0, 1, 2097210, 262144, 0, 2097212, 196608, 0, 2359295, 131072, 1, 2293759, 131072, 1, 2228223, 131072, 1)
metadata/_edit_group_ = true

[node name="Player" parent="." index="1"]
position = Vector2(55, 585)

[node name="Camera2D" parent="." index="2"]
position = Vector2(55, 585)

[node name="Objects" type="Node2D" parent="." index="3"]
position = Vector2(1, 0)
script = ExtResource("3_htfu2")

[node name="Door" parent="Objects" index="0" instance=ExtResource("2_m8bh2")]
position = Vector2(952, 572)

[node name="Console" parent="Objects" index="1" instance=ExtResource("4_27btd")]
position = Vector2(496, 484)
scale = Vector2(-1, 1)

[node name="Enemy" parent="." index="4" instance=ExtResource("3_ldett")]
position = Vector2(1312, 649)

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]
script = ExtResource("8_51qe5")

[node name="HeartsEmpty" type="TextureRect" parent="CanvasLayer" index="0"]
offset_right = 64.0
offset_bottom = 16.0
texture = ExtResource("9_kfrr5")
stretch_mode = 1

[node name="HeartsFull" type="TextureRect" parent="CanvasLayer" index="1"]
offset_right = 64.0
offset_bottom = 16.0
texture = ExtResource("8_y6m68")
stretch_mode = 1

[node name="MovePopP" type="Panel" parent="." index="6"]
custom_minimum_size = Vector2(170, 0)
offset_left = 90.0
offset_top = 448.0
offset_right = 260.0
offset_bottom = 488.0
theme = ExtResource("5_xm76d")

[node name="MovePopL" type="Label" parent="MovePopP" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.416
anchor_bottom = 0.416
offset_left = 2.0
offset_top = -16.64
offset_right = 169.0
offset_bottom = 21.36
theme = ExtResource("5_xm76d")
text = "
To move use the keys
 A,D or the arrow keys "
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="MovePopP" index="1"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovePopP/Area2D" index="0"]
position = Vector2(-19, 107)
shape = SubResource("RectangleShape2D_dor0c")

[node name="JumpPopP" type="Panel" parent="." index="7"]
custom_minimum_size = Vector2(170, 0)
offset_left = 288.0
offset_top = 446.0
offset_right = 458.0
offset_bottom = 486.0
theme = ExtResource("5_xm76d")

[node name="JumpPopL" type="Label" parent="JumpPopP" index="0"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "
To jump use the spacebar 
or the up arrow"
horizontal_alignment = 1

[node name="jumpArea" type="Area2D" parent="JumpPopP" index="1"]
collision_layer = 4
collision_mask = 2

[node name="jumpColl" type="CollisionShape2D" parent="JumpPopP/jumpArea" index="0"]
position = Vector2(52, 109.5)
shape = SubResource("RectangleShape2D_8v4kk")

[node name="InteractPopP" type="Panel" parent="." index="8"]
custom_minimum_size = Vector2(225, 0)
offset_left = 762.0
offset_top = 448.0
offset_right = 987.0
offset_bottom = 488.0
theme = ExtResource("5_xm76d")

[node name="InteractPopL" type="Label" parent="InteractPopP" index="0"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 217.0
offset_bottom = 34.0
text = "
To interact with the door 
search for the console and press E"
horizontal_alignment = 1

[node name="InteractArea" type="Area2D" parent="InteractPopP" index="1"]
collision_layer = 4
collision_mask = 2

[node name="interactColl" type="CollisionShape2D" parent="InteractPopP/InteractArea" index="0"]
position = Vector2(119.25, 110)
shape = SubResource("RectangleShape2D_or72r")

[node name="FightPopP2" type="Panel" parent="." index="9"]
custom_minimum_size = Vector2(235, 0)
offset_left = 1035.0
offset_top = 448.0
offset_right = 1260.0
offset_bottom = 488.0
theme = ExtResource("5_xm76d")

[node name="FightPopL" type="Label" parent="FightPopP2" index="0"]
custom_minimum_size = Vector2(230, 0)
layout_direction = 2
layout_mode = 0
offset_top = 1.0
offset_right = 230.0
offset_bottom = 34.0
text = "
To go to the next level, defeat the
enemy with F and use the portal"
horizontal_alignment = 1

[node name="FightArea" type="Area2D" parent="FightPopP2" index="1"]
collision_layer = 4
collision_mask = 2

[node name="FightColl" type="CollisionShape2D" parent="FightPopP2/FightArea" index="0"]
position = Vector2(75, 108)
shape = SubResource("RectangleShape2D_rrrue")

[node name="PortalPopP" type="Panel" parent="." index="10"]
custom_minimum_size = Vector2(180, 0)
offset_left = 1406.0
offset_top = 423.0
offset_right = 1586.0
offset_bottom = 463.0
theme = ExtResource("5_xm76d")

[node name="PortalPopL" type="Label" parent="PortalPopP" index="0"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "
  You must defeat the enemy
            to continue"

[node name="Portal2" parent="." index="11" instance=ExtResource("10_n6ech")]
position = Vector2(1498, 504)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="12"]
stream = ExtResource("12_pn451")
autoplay = true

[connection signal="body_entered" from="MovePopP/Area2D" to="." method="_on_area_2d_body_entered_MovePop"]
[connection signal="body_exited" from="MovePopP/Area2D" to="." method="_on_area_2d_body_exited_MovePop"]
[connection signal="body_entered" from="JumpPopP/jumpArea" to="." method="_on_jump_area_body_entered"]
[connection signal="body_exited" from="JumpPopP/jumpArea" to="." method="_on_jump_area_body_exited"]
[connection signal="body_entered" from="InteractPopP/InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractPopP/InteractArea" to="." method="_on_interact_area_body_exited"]
[connection signal="body_entered" from="FightPopP2/FightArea" to="." method="_on_fight_area_body_entered"]
[connection signal="body_exited" from="FightPopP2/FightArea" to="." method="_on_fight_area_body_exited"]
[connection signal="player_entered_teleporter" from="Portal2" to="." method="_on_portal_2_player_entered_teleporter"]
[connection signal="player_exited_teleporter" from="Portal2" to="." method="_on_portal_2_player_exited_teleporter"]
